# swift-check

./: Cargo.toml  README.md
benches/: all.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: all.rs
src/: lib.rs  require.rs
src/arch/: aarch64.rs  cfg_macros.rs  fallback.rs  fallback_scan.rs  mod.rs  simd_scan.rs  wasm.rs  x86_64.rs
wasm_test/cli/: Cargo.toml
wasm_test/cli/src/: main.rs
