[package]
name = "swift-check"
version = "0.1.0"
edition = "2021"
authors = ["Clelland Green <cg@ironvelo.com>"]
description = "High-performance library for expressive searching and validation (uses SIMD on x86_64, aarch64, and WASM)"
keywords = ["simd", "search", "find", "validation"]
categories = ["no-std::no-alloc"]
rust-version = "1.61.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/swift-check"
repository = "https://github.com/IronVelo/swift-check"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[features]
simd = []
ensure-simd = ["simd"]
experimental = []
default = ["simd"]

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
memchr = { version = "2.7.2", default-features = false }
quickcheck = "1.0.3"

[profile.bench]
lto = true
opt-level = 3
debug-assertions = false

[[bench]]
name = "all"
harness = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]